Added file sharing functionality between devices

--- a/templates/client.html
+++ b/templates/client.html
@@ -76,6 +76,12 @@
                             </div>
                         </div>
                     </div>
+                    <div class="file-sharing-section">
+                        <h3>Available Files</h3>
+                        <div class="file-list" id="availableFiles">
+                            <p>Connect to server to see available files</p>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
