--- a/templates/client.html
+++ b/templates/client.html
@@ -19,7 +19,7 @@
                 <h3>Connection Log</h3>
             </div>
             <div class="sidebar-content">
-                <div class="log-entry">System initialized...</div>
+                <div class="log-entry">Client ready...</div>
             </div>
         </aside>
 
@@ -36,18 +36,24 @@
                             <h2>Connection Information</h2>
                         </div>
                         <div class="connection-content">
-                            <div class="server-info">
+                            <div class="device-info">
                                 <div class="info-group">
-                                    <strong>Server Name:</strong>
-                                    <span id="serverName">Not connected</span>
+                                    <strong>Device Name:</strong>
+                                    <span id="deviceName">Loading...</span>
                                 </div>
                                 <div class="info-group">
-                                    <strong>Server IP:</strong>
-                                    <span id="serverIp">-</span>
+                                    <strong>IP Address:</strong>
+                                    <span id="deviceIp">Loading...</span>
+                                </div>
+                            </div>
+                            <div class="server-connection">
+                                <div class="input-group">
+                                    <input type="text" id="serverIp" placeholder="Enter server IP address" class="ip-input">
+                                    <button class="connect-button" id="connectButton">Connect</button>
                                 </div>
                                 <div class="status-indicator">
                                     <span class="status-dot"></span>
-                                    <span class="status-text">Disconnected</span>
+                                    <span class="status-text">Ready to connect</span>
                                 </div>
                             </div>
                         </div>
@@ -56,7 +62,7 @@
                     <div class="file-sharing-section">
                         <h3>Available Files</h3>
                         <div class="files-container" id="availableFiles">
-                            <p>No files available</p>
+                            <p>Connect to server to see available files</p>
                         </div>
                     </div>
                 </div>
